// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-2261047582 measure-wide center sans-serif f3 fw2 "
>
  <h1
    className="jsx-2261047582 lh-title fw2 f2 pv3"
  >
    <a
      className="jsx-2261047582 no-underline"
      href="/"
    >
      melkat
    </a>
  </h1>
  <footer
    className="jsx-4201710700 lh-copy tc f6"
  >
    <p
      className="jsx-4201710700"
    >
      code by 
      <a
        className="jsx-4201710700"
        href="https://melaniekat.com"
        rel="me"
      >
        melanie kat
      </a>
       &lt;3
    </p>
  </footer>
</main>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-2261047582 measure-wide center sans-serif f3 fw2 "
>
  <h1
    className="jsx-2261047582 lh-title fw2 f2 pv3"
  >
    <a
      className="jsx-2261047582 no-underline"
      href="/"
    >
      melkat
    </a>
  </h1>
  <b>
    #content
  </b>
  <footer
    className="jsx-4201710700 lh-copy tc f6"
  >
    <p
      className="jsx-4201710700"
    >
      code by 
      <a
        className="jsx-4201710700"
        href="https://melaniekat.com"
        rel="me"
      >
        melanie kat
      </a>
       &lt;3
    </p>
  </footer>
</main>
`;
